<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <TextView
        android:id="@+id/textViewDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"/>

    <Button
        android:id="@+id/button1"
        style="@style/ButtonCalculator"
        android:text="@string/button1"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisplay"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button2"
        style="@style/ButtonCalculator"
        android:text="@string/button2"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisplay"
        app:layout_constraintStart_toEndOf="@+id/button1"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button3"
        style="@style/ButtonCalculator"
        android:text="@string/button3"
        app:layout_constraintTop_toBottomOf="@+id/textViewDisplay"
        app:layout_constraintStart_toEndOf="@+id/button2"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button4"
        style="@style/ButtonCalculator"
        android:text="@string/button4"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button5"
        style="@style/ButtonCalculator"
        android:text="@string/button5"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button4"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button6"
        style="@style/ButtonCalculator"
        android:text="@string/button6"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button5"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button7"
        style="@style/ButtonCalculator"
        android:text="@string/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button8"
        style="@style/ButtonCalculator"
        android:text="@string/button8"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button9"
        style="@style/ButtonCalculator"
        android:text="@string/button9"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button8"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/button0"
        style="@style/ButtonCalculator"
        android:text="@string/button0"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />
    <Button
        android:id="@+id/buttonPoint"
        style="@style/ButtonCalculator"
        android:text="@string/buttonPoint"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@id/button0"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />
    <Button
        android:id="@+id/buttonClean"
        style="@style/ButtonCalculator"
        android:text="@string/buttonClean"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@id/buttonPoint"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/buttonDivide"
        style="@style/ButtonCalculator"
        android:text="@string/buttonDivide"
        app:layout_constraintTop_toBottomOf ="@+id/textViewDisplay"
        app:layout_constraintStart_toEndOf="@+id/button3"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/buttonMultiply"
        style="@style/ButtonCalculator"
        android:text="@string/buttonMultiply"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide"
        app:layout_constraintStart_toEndOf="@+id/button9"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/buttonMinus"
        style="@style/ButtonCalculator"
        android:text="@string/buttonMinus"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@+id/button9"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/buttonPlus"
        style="@style/ButtonCalculator"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/buttonPlus"
        app:layout_constraintStart_toEndOf="@+id/buttonClean"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/buttonEquals"
        style="@style/ButtonCalculator"
        android:text="@string/buttonEquals"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus"
        app:layout_constraintStart_toStartOf ="@+id/buttonPlus"
        android:layout_marginTop="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>