<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ImageViewLogCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:src="@drawable/company_logo"
        android:contentDescription="@string/descriptionLogoCompany"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="39dp"/>

    <ImageButton
        android:id="@+id/imageButtonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/exit_icon"
        android:background="@android:color/white"
        android:contentDescription="@string/imageButtonExit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/editTextUserName"
        android:minHeight="48dp"
        android:minWidth="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="265dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/editTextPassword"
        android:minHeight="48dp"
        android:minWidth="200dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
        app:layout_constraintStart_toStartOf="@+id/editTextUserName"
        android:layout_marginTop="30dp"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonSignIn"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        android:layout_marginTop="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>