<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConverterActivity">
    <EditText
        android:id="@+id/editTextEnterSum"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/editTextEnterSum"
        android:layout_marginBottom="120dp" />

    <EditText
        android:id="@+id/editTextExchangeRate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEnterSum"
        android:layout_marginTop="16dp"
        android:hint="@string/editTextExchangeRate"/>

    <TextView
        android:id="@+id/textViewResultСonversion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextExchangeRate"
        android:layout_marginTop="16dp"
        android:text="@string/textViewResultConversion"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/buttonClickConversion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultСonversion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/buttonClickConversion"
        android:textSize="18sp" />

</androidx.constraintlayout.widget.ConstraintLayout>